--- a/src/main/resources/config/application-local.yaml
+++ b/src/main/resources/config/application-local.yaml
@@ -1,4 +1,20 @@
+enigma:
+  client:
+    enigma-base-url: "http://localhost:8081/enigma/"
+    two-way-enabled: false
+    # enigma-base-url: "https://localhost:8444/enigma/"
+    # key store
+    key-store: enigmaclient.p12
+    key-store-password: 2secure4u
+    key-store-type: pkcs12
+    key-store-alias: enigmaclient
+    # trust store
+    trust-store: enigmaclient.p12
+    trust-store-password: 2secure4u
+    trust-store-type: pkcs12
 server:
-  port: 8443
-key-management-bo:
-  http-port: 8080
+  ssl:
+    key-store-type: pkcs12
+    key-store-password: 2secure4u
+    key-alias: enigmabackoffice
+    key-store: classpath:enigmabackoffice.p12
