--- a/key-management/package.json
+++ b/key-management/package.json
@@ -2,7 +2,7 @@
   "name": "key-management",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8081",
+  "proxy": "https://localhost:8443",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
