Added k8s config. regenerated certificates.

--- a/pom.xml
+++ b/pom.xml
@@ -77,13 +77,6 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.keycloak.bom</groupId>
                 <artifactId>keycloak-adapter-bom</artifactId>
                 <version>9.0.3</version>
@@ -170,7 +163,7 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>enigma/backoffice</name>
+                            <name>enigma/backoffice:${project.version}</name>
                         </image>
                     </images>
                 </configuration>
