--- a/key-management/package.json
+++ b/key-management/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "keycloak-js": "^11.0.2",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-cookie": "^4.0.3",
